force-app/main/default/objects/Case/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <description>Tracks the current escalation level of the case</description>
    <label>Escalation Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>