force-app/main/default/objects/Case/fields/First_Response_Completed__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Completed__c</fullName>
    <description>Indicates whether the first response has been completed</description>
    <label>First Response Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>