force-app/main/default/objects/Case/fields/First_Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Deadline__c</fullName>
    <description>Deadline for the first response to the case</description>
    <label>First Response Deadline</label>
    <type>DateTime</type>
</CustomField>