force-app/main/default/objects/Case/fields/Next_Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Escalation_Time__c</fullName>
    <description>Timestamp for the next scheduled escalation</description>
    <label>Next Escalation Time</label>
    <type>DateTime</type>
</CustomField>