force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product associated with the support case</description>
    <label>Product</label>
    <length>255</length>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product A</fullName>
            </value>
            <value>
                <fullName>Product B</fullName>
            </value>
            <value>
                <fullName>Product C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>