force-app/main/default/objects/Case/fields/Resolution_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Deadline__c</fullName>
    <description>Deadline for resolving the support case</description>
    <label>Resolution Deadline</label>
    <type>DateTime</type>
</CustomField>