force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <description>Current SLA status of the case</description>
    <label>SLA Status</label>
    <length>255</length>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within SLA</fullName>
                <default>true</default>
                <label>Within SLA</label>
            </value>
            <value>
                <fullName>First Response Breached</fullName>
            </value>
            <value>
                <fullName>Resolution Breached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>